--- a/hobbies.html
+++ b/hobbies.html
@@ -10,11 +10,11 @@
         <a href="https://www.learnpython.org/">
             <li>Studying</li>
         </a>
-        <a href="https://www.sleepfoundation.org">
-            <li>Sleeping</li>
+        <a href="https://www.healthline.com/nutrition/how-to-start-exercising">
+            <li>Working Out</li>
         </a>
         <a href="https://www.urbandictionary.com/define.php?term=foody">
-            <li>Eating</li>
+            <li>Food Preparing</li>
         </a>
     </ol>
     </body>
