Update Index-changed descrpition

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <td>
                 <h1>Perica Perisic</h1>
                 <p><em>Student at <strong><a href="https://www.appbrewery.co/">100 days of Code</a></strong>.</em></p>
-                <p>This is a brief description. I don't know what to write.</p>
+                <p>Currently studying Python.</p>
             </td>
             <td></td>
         </tr>
