--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+a<!DOCTYPE html>
     <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -8,7 +8,7 @@
     <table cellspacing="20">
         <tr>
             <td>
-                <img src="efekttt4.png"
+                <img src="perica.png"
                      alt="Perica profile picture">
             </td>
             <td>
