--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ a<!DOCTYPE html>
     <table cellspacing="20">
         <tr>
             <td>
-                <img src="perica.png"
+                <img src="perica-modified (1).png"
                      alt="Perica profile picture">
             </td>
             <td>
